<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    style="@style/padding_style"
    android:background="@drawable/add_admin_back"
    tools:context="com.gxu.embroidery.GoodsInfoActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:orientation="vertical"
        android:gravity="center">

        <Button
            android:text="@string/select_img"
            android:layout_width="wrap_content"
            android:id="@+id/select_img"
            style="@style/btn_style"
            android:layout_height="wrap_content" />

        <ImageView
            android:id="@+id/user_img"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:visibility="gone"
            android:background="@drawable/btn_selecter"
            android:src="@drawable/head" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:gravity="center_horizontal"
        android:layout_height="wrap_content">
        <TextView android:text="@string/u_name" android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <EditText android:id="@+id/u_name_value"  android:layout_width="150dp"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:gravity="center_horizontal"
        android:layout_height="wrap_content">
        <TextView android:text="@string/u_pwd" android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <EditText android:id="@+id/u_pwd_value"  android:layout_width="150dp"
            android:inputType="textPassword"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:gravity="center_horizontal"
        android:layout_height="wrap_content">
        <TextView android:text="@string/u_pwd_confirm" android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <EditText android:id="@+id/u_pwd_confirm_value"  android:layout_width="150dp"
            android:inputType="textPassword"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:gravity="center_horizontal"
        android:layout_height="wrap_content">
        <TextView android:text="@string/u_phone" android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <EditText android:id="@+id/u_phone_value" android:layout_width="150dp"
            android:inputType="phone"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="50dp"
        android:paddingRight="50dp"
        style="@style/btn_style"
        android:text="@string/get_code"
        android:id="@+id/get_code"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:gravity="center_horizontal"
        android:layout_height="wrap_content">
        <TextView android:text="@string/code" android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <EditText android:id="@+id/code_value" android:layout_width="150dp"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:id="@+id/register_user"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        style="@style/btn_style"
        android:text="@string/register_user"
        android:layout_height="wrap_content" />



</LinearLayout>
