<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    style="@style/padding_style"
    android:background="@drawable/add_admin_back"
    android:gravity="center"
    tools:context="com.gxu.embroidery.AdminAddActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView android:text="@string/m_num" android:layout_width="wrap_content"
            android:layout_weight="1"
            android:layout_height="wrap_content" />
        <EditText android:id="@+id/m_num_value" android:layout_width="wrap_content"
            android:layout_weight="40"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView android:text="@string/m_name" android:layout_width="wrap_content"
            android:layout_weight="1"
            android:layout_height="wrap_content" />
        <EditText android:id="@+id/m_name_value" android:layout_width="wrap_content"
            android:layout_weight="40"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView android:text="@string/m_pwd" android:layout_width="wrap_content"
            android:layout_weight="1"
            android:layout_height="wrap_content" />
        <EditText android:id="@+id/m_pwd_value" android:layout_width="wrap_content"
            android:layout_weight="40"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView android:text="@string/m_phone" android:layout_width="wrap_content"
            android:layout_weight="1"
            android:layout_height="wrap_content" />
        <EditText android:id="@+id/m_phone_value" android:layout_width="wrap_content"
            android:layout_weight="40"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <Button
        android:layout_width="wrap_content"
        android:id="@+id/add_admin"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        style="@style/btn_style"
        android:text="@string/add_admin"
        android:layout_height="wrap_content" />



</LinearLayout>
